--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "query-string": "^6.8.3",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
   },
